wm: Have overview and cycle list share some code.

Refactor overview and cycle list code. The should end up showing the same
windows, so they should share the same codes if possible.

Test: manual
Bug: 844829
Change-Id: Ib5f2800f7b0876afcff10cea3bf37f0156e83467
Reviewed-on: https://chromium-review.googlesource.com/c/1344814
Commit-Queue: Sammie Quon <sammiequon@chromium.org>
Reviewed-by: Mitsuru Oshima <oshima@chromium.org>
Cr-Commit-Position: refs/heads/master@{#611977}
Former-commit-id: 1c2052ab5f930300f4a5fe2cc1de15a06c64e516